--- a/docs/public/installing-odo.adoc
+++ b/docs/public/installing-odo.adoc
@@ -47,25 +47,25 @@ The following section describes how to install `odo` on different platforms via 
 === Binary installation
 
 . Download the latest link:https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-windows-amd64.exe[`odo-windows-amd64.exe`] file.
-. Rename the downloaded file to `odo.exe`
-. Add the location of your `odo.exe` to your `GOPATH/bin` directory. For details on how to set `GOPATH` see link:https://golang.org/doc/gopath_code.html#GOPATH[`The GOPATH environment variable`]
+. Rename the downloaded file to `odo.exe` and move it to a folder of your choice, for example `C:\odo`
+. Add the location of your `odo.exe` to your `%PATH%`.
 
 === Setting the `PATH` variable for Windows 10
 
 Edit `Environment Variables` using search:
-The following examples demonstrates how to set up a path variable. Your binaries can be located in any location, but this example uses C:\Go\bin as the location.
+The following examples demonstrates how to set up a path variable. Your binaries can be located in any location, but this example uses C:\odo as the location.
 
 . Click *Search* and type `env` or `environment`.
 . Select *Edit environment variables for your account*.
 . Select *Path* from the *Variable* section and click *Edit*.
-. Click *New* and type `C:\Go\bin` into the field or click *Browse* and select the directory, and click *OK*.
+. Click *New* and type `C:\odo` into the field or click *Browse* and select the directory, and click *OK*.
 
 === Setting the `PATH` variable for Windows 7/8
 
 . Click *Start* and in the `Search` box types `Advance System Settings`.
 . Select *Advanced systems settings* and click the *Environment Variables* button at the bottom.
 . Select the *Path* variable from the *System variable* section and click *Edit*.
-. Scroll to the end of the *Variable Value* and add `;C:\Go\bin` and click *OK*.
+. Scroll to the end of the *Variable Value* and add `;C:\odo` and click *OK*.
 . CLick *OK* to close the *Environment Variable* dialog.
 . CLick *OK* to close the *Systems Properties* dialog.
 
