--- a/docs/public/operators-on-minikube.adoc
+++ b/docs/public/operators-on-minikube.adoc
@@ -105,7 +105,7 @@ Service Binding Operator is not yet available via the OLM. The team is link:http
 At the moment, to make Service Binding Operator work on Kubernetes, we need to keep a couple of things in mind:
 
 . It needs to be installed by cloning its GitHub repository
-. It must be installed in an individual namespace unlike the cluster wide installation we saw for etcd Operator in previous section
+. It must be installed in a namespace other than `operators` namespace.
 . In this guide, we're installing the Service Binding Operator in `default` namespace. You can install it in the namespace you prefer to use it in
 
 Let's setup the Service Binding Operator now.
@@ -125,7 +125,7 @@ $ cd deploy
 +
 [source,sh]
 ----
-$ kubectl create -f crds/apps.openshift.io_servicebindingrequests_crd.yaml
+$ kubectl create -f https://raw.githubusercontent.com/redhat-developer/service-binding-operator/v0.1.1-364/deploy/crds/apps.openshift.io_servicebindingrequests_crd.yaml
 $ kubectl create -f service_account.yaml -f role.yaml -f role_binding.yaml
 ----
 
@@ -173,19 +173,44 @@ roleRef:
 EOF
 ----
 
-. Next, we modify the `operator.yaml` file to install the Operator in a specific namespace and use the container image that matches the version of the git commit (`git log -n1 --oneline`) of the repository. Make change as per below `git diff` but make sure to set the value of `namespace` to the namespace where you want to install the Operator:
+. Next, we modify the `operator.yaml` file to install the Operator in a specific namespace and use the container image that matches the version of Service Binding Operator that odo supports. Below is the resulting `operator.yaml` file (set the value of namespace to suit your environment):
 +
-[source,diff]
+[source,yaml]
 ----
-diff --git a/deploy/operator.yaml b/deploy/operator.yaml
-index 2cd90ec7..21c4768c 100644
---- a/deploy/operator.yaml
-+++ b/deploy/operator.yaml
-@@ -4,0 +5 @@ metadata:
-+  namespace: default
-@@ -19 +20 @@ spec:
--          image: REPLACE_IMAGE
-+          image: quay.io/redhat-developer/app-binding-operator:0799ba7
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: service-binding-operator
+  namespace: default
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      name: service-binding-operator
+  template:
+    metadata:
+      labels:
+        name: service-binding-operator
+    spec:
+      serviceAccountName: service-binding-operator
+      containers:
+        - name: service-binding-operator
+          # Replace this with the built image name
+          image: quay.io/redhat-developer/app-binding-operator:v0.1.1-364
+          command:
+          - service-binding-operator
+          imagePullPolicy: Always
+          env:
+            - name: WATCH_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: OPERATOR_NAME
+              value: "service-binding-operator"
 ----
 
 . Finally, install the Operator using below command:
