Makes odo work with v0.3.0 of Service Binding Operator

--- a/docs/public/operator-hub.adoc
+++ b/docs/public/operator-hub.adoc
@@ -1,4 +1,10 @@
-== Introduction to Operators
+== Creating and linking with Operator backed services
+
+In this document we will go through what Operators are, how to create and delete services from the installed Operators, and how to link an odo component with an Operator backed service. We do this walking through an example Node.js application and linking it with an etcd key-value store.
+
+NOTE: We will be updating our documentation with more examples of linking components to different kinds of Operator backed services in future.
+
+=== Introduction to Operators
 
 What is an Operator?
 
@@ -17,13 +23,13 @@ To install Operators on a Kubernetes cluster, contact your cluster administrator
 To install Operators on an OpenShift cluster, contact your cluster administrator or see the link:https://docs.openshift.com/container-platform/4.6/operators/admin/olm-adding-operators-to-cluster.html[OpenShift documentation].
 ====
 
-== Deploying your first Operator
+=== Deploying your first Operator
 
-==== Prerequisites
+===== Prerequisites
 
 * You must have cluster permissions to install an Operator on either link:https://docs.openshift.com/container-platform/latest/operators/olm-adding-operators-to-cluster.html[OpenShift] or link:https://github.com/operator-framework/operator-lifecycle-manager/blob/master/doc/install/install.md[Kubernetes]. If you're running a link:https://minikube.sigs.k8s.io/docs/[minikube] cluster, you can refer link:operators-on-minikube.adoc[this guide] to install Operators required to run example mentioned in this document.
 
-== Creating a project
+=== Creating a project
 
 Create a project to keep your source code, tests, and libraries
 organized in a separate single unit.
@@ -44,7 +50,7 @@ $ odo project create myproject
  ✓  New project created and now using project : myproject
 ----
 
-== Installing an Operator
+=== Installing an Operator
 
 In our examples, we install link:https://etcd.io/[etcd], a distributed key-value store from link:https://operatorhub.io/operator/etcd[Operator Hub].
 
@@ -54,15 +60,15 @@ Each Operator we install refers to the built-in `metadata.annotations.alm-exampl
 ====
 
 
-=== Kubernetes installation
+==== Kubernetes installation
 
-For Kubernetes installation, you must install the Operator Lifecycle Manager and etcd from the link:https://operatorhub.io/operator/etcd[etcd installation guide on Operator Hub].
+For Kubernetes installation, you must need to install the Operator Lifecycle Manager and etcd Operator from the link:https://operatorhub.io/operator/etcd[etcd installation guide on Operator Hub]. You can refer link:operators-on-minikube.adoc[this document] for steps setup Operator Lifecycle Manager and etcd Operator on a link:https://minikube.sigs.k8s.io/[minikube] cluster.
 
-=== OpenShift installation
+==== OpenShift installation
 
 For OpenShift installation, the etcd Operator can be installed through the link:https://docs.openshift.com/container-platform/latest/operators/olm-adding-operators-to-cluster.html[administrative console].
 
-=== Listing all available Operators
+==== Listing all available Operators
 
 Before deploying your first Operator, have a look at what is available:
 [source,sh]
@@ -77,7 +83,7 @@ In above output, `etcdoperator.v0.9.4` is the Operator while `EtcdCluster`,
 `EtcdBackup` and `EtcdRestore` are the CRDs provided by this Operator.
 
 
-== Creating an Operator backed service
+=== Creating an Operator backed service
 
 In this example, we will be deploying `EtcdCluster` service from link:https://operatorhub.io/operator/etcd[etcd Operator] to an OpenShift / Kubernetes cluster. This service is provided by the Operator `etcdoperator`. Please ensure that this Operator is installed on your OpenShift / Kubernetes cluster before trying to create `EtcdCluster` service from it. If it's not installed, please install it by logging into your OpenShift / Kubernetes cluster as `kube:admin` user.
 
@@ -97,7 +103,7 @@ $ odo service list
 
 It is important to note that `EtcdBackup` and `EtcdRestore` cannot be deploymeed the same way as we deployed `EtcdCluster` as they require configuring other parameters in their YAML definition.
 
-== Deploying Operator backed service to a cluster via YAML
+=== Deploying Operator backed service to a cluster via YAML
 
 
 In this example, we will be deploying our link:https://operatorhub.io/operator/etcd[installed etcd Operator] to an OpenShift / Kubernetes cluster.
@@ -143,7 +149,7 @@ $ odo service create --from-file etcd.yaml
 $ odo service list
 ----
 
-== Linking an odo component with an Operator backed service
+=== Linking an odo component with an Operator backed service
 
 Linking a component to a service means, in simplest terms, to make a service usable from the component.
 
@@ -174,7 +180,7 @@ $ odo push
 For the link between a component and Operator Hub backed service to take effect, make sure you do `odo push`. The link won't be effective otherwise.
 ====
 
-== Unlinking an odo component from an Operator backed service
+=== Unlinking an odo component from an Operator backed service
 
 Unlinking unsets the environment variables that were set by linking. This would cause your application to cease being able to communicate with the service linked using `odo link`.
 
@@ -197,7 +203,7 @@ $ odo push
 For unlinking to take effect, make sure you do `odo push`. It won't be effective otherwise.
 ====
 
-== Deleting an Operator backed service
+=== Deleting an Operator backed service
 
 To delete an Operator backed service, provide full name of the service that you see in the output of `odo service list`. For example:
 
