--- a/docs/public/operator-hub.adoc
+++ b/docs/public/operator-hub.adoc
@@ -6,7 +6,16 @@ An Operator is essentially a link:https://www.openshift.com/learn/topics/operato
 
 With Operators, odo allows you to create a service as defined by a Custom Resource Definition (CRD).
 
-odo utilizes Operators in order to provide a seamless method for custom controller service installation. These Operators could be installed using link:https://operatorhub.io/[Operator Hub] or you could install a custom Operator developed within your organization.
+odo utilizes Operators and link:https://operatorhub.io/[Operator Hub] in order to provide a seamless method for custom controller service installation.
+
+[WARNING]
+====
+You cannot install Operators with odo on your cluster. 
+
+To install Operators on a Kubernetes cluster, contact your cluster administrator or see the link:https://kubernetes.io/docs/concepts/extend-kubernetes/operator/[Kubernetes documentation].
+
+To install Operators on an OpenShift cluster, contact your cluster administrator or see the link:https://docs.openshift.com/container-platform/4.6/operators/admin/olm-adding-operators-to-cluster.html[OpenShift documentation].
+====
 
 == Deploying your first Operator
 
