--- a/docs/public/operator-hub.adoc
+++ b/docs/public/operator-hub.adoc
@@ -101,7 +101,7 @@ $ odo service create etcdoperator.v0.9.4/EtcdCluster
 $ odo service list
 ----
 
-It is important to note that `EtcdBackup` and `EtcdRestore` cannot be deploymeed the same way as we deployed `EtcdCluster` as they require configuring other parameters in their YAML definition.
+It is important to note that `EtcdBackup` and `EtcdRestore` cannot be deployed the same way as we deployed `EtcdCluster` as they require configuring other parameters in their YAML definition.
 
 === Deploying Operator backed service to a cluster via YAML
 
