Remove external nodejs dependency of Git

--- a/docs/dev/test-architecture.adoc
+++ b/docs/dev/test-architecture.adoc
@@ -218,10 +218,10 @@ var _ = Describe("odo generic", func() {
             os.Unsetenv("GLOBALODOCONFIG")
         })
         It("should deploy the component", func() {
-            helper.CmdShouldPass("git", "clone", "https://github.com/openshift/nodejs-ex", context+"/nodejs-ex")
-            helper.CmdShouldPass("odo", "create", "nodejs:latest", "testversioncmp", "--project", project, "--context", context+"/nodejs-ex")
-            helper.CmdShouldPass("odo", "push", "--context", context+"/nodejs-ex")
-            helper.CmdShouldPass("odo", "delete", "-f", "--context", context+"/nodejs-ex")
+            helper.CopyExample(filepath.Join("source", "nodejs"), context)
+            helper.CmdShouldPass("odo", "create", "nodejs:latest", "testversioncmp", "--project", project, "--context", context)
+            helper.CmdShouldPass("odo", "push", "--context", context)
+            helper.CmdShouldPass("odo", "delete", "-f", "--context", context)
         })
     })
 })
