--- a/docs/dev/ci-reference.adoc
+++ b/docs/dev/ci-reference.adoc
@@ -1,46 +1,44 @@
-= ci-reference
+= CI-reference
 
-== Running integration test job in Travis CI
+== Running PR test job on PSI
 
-For default oc, use the configuration in `.travis.yaml`. For example:
+PSI contains an Openshift cluster running behind firewall, we are using prow to create request for PRs, we are running rabbitmq on a public cloud to access queue for creating jobs with internal jenkins(behind a firewall). Prow uses ci-firewall within https://github.com/openshift/odo/blob/master/scripts/openshiftci-presubmit-all-tests.sh[scripts/openshiftci-presubmit-all-tests.sh]  to create request to rabbitmq. ci-firewall creates a json message `CI_MESSAGE='{"repourl": "repourl", "kind": "PR", "target": "target", "setupscript": "setupscript", "runscript": "runscript", "rcvident": "rcvident", "runscripturl": "http://url", "mainbranch": "master"}'` passes it to the rabbitmq send queue as an env variable, for every message in send queue a build is triggered using a jenkins robot account, jenkins then executes the build script to start the test on the node provided in SSHNodeFile(json contains information related to node), SSHNodeFile can contain multiple node information. CI-firewall then executes the test and send back logs for tests using a receive queue. 
 
+Jenkins build script
 [source,sh]
 ----
-  # Run generic, login and plugin handler integration tests
-    - <<: *base-test
-      stage: test
-      name: "generic, login and plugin handler integration tests"
-      script:
-        - ./scripts/oc-cluster.sh
-        - make configure-supported-311-is
-        - make bin
-        - sudo cp odo /usr/bin
-        - odo login -u developer
-        - travis_wait make test-generic
-        - travis_wait make test-plugin-handler
-        - odo logout
+  rm -rf ./* 
+  curl -kJLO https://github.com/mohammedzee1000/ci-firewall/releases/download/${CI_FIREWALL_VERSION}/ci-firewall-linux-amd64.tar.gz
+  tar -xzf ./ci-firewall-linux-amd64.tar.gz && rm -rf ./ci-firewall-linux-amd64.tar.gz && chmod +x ./ci-firewall
+  curl -kJLO  <SSHNodeFile>/jenkins-nodes.json
+  curl -kJLO <kube-password>
+  NDFILE="$(pwd)/jenkins-nodes.json"
+  KUBEADMIN_PASSWORD_FILE="$(pwd)/kube-password"
+  ./ ci-firewall work --sshnodesfile ${NDFILE} --env "OCP4X_API_URL=https://<url-to-ocp-cluster>" --env "OCP4X_KUBEADMIN_PASSWORD=$(cat ${KUBEADMIN_PASSWORD_FILE})" --env "CI=openshift"
+  rm -rf ./*
 ----
 
-If you need to run `odo` integration tests against a specific version of Openshift, use env variable `OPENSHIFT_CLIENT_BINARY_URL` to pass the https://github.com/openshift/origin/releases[released] oc client URL in `.travis.yaml`. For oc v3.10.0, use the configuration:
-
-[source,sh]
+SSHNodeFile 
+[source,txt]
 ----
-  # Run generic, login and plugin handler integration tests
-    - <<: *base-test
-      stage: test
-      name: "generic, login and plugin handler integration tests"
-      script:
-        - OPENSHIFT_CLIENT_BINARY_URL=https://github.com/openshift/origin/releases/download/v3.10.0/openshift-origin-client-tools-v3.10.0-dd10d17-linux-64bit.tar.gz ./scripts/oc-cluster.sh
-        - make configure-supported-311-is
-        - make bin
-        - sudo cp odo /usr/bin
-        - odo login -u developer
-        - travis_wait make test-generic
-        - travis_wait make test-plugin-handler
-        - odo logout
+  {
+	  "nodes": [{
+		  "name": "common name of node. example -Fedora 31-",
+  		"user": "username to ssh into the node with",
+  		"address": "The address of the node, like an ip or domain name without port",
+  		"port": 22,
+  		"baseos": "linux|windows|mac",
+  		"arch": "arch of the system eg amd64",
+  		"password": "not recommended but you can provide password of target node",
+  		"privatekey": "Optional again but either this or password MUST be given.",
+  		"tags": ["optional sample tags to append to logs from ssh node. Node `name is already attached as `ssh:name`"]
+  	}]
+  }
 ----
 
-== Running integration tests on Prow
+== Tests on Prow
+
+=== Running integration tests on Prow
 
 Prow is the Kubernetes or OpenShift way of managing workflow, including tests. Odo integration and periodic test targets are passed through the script scripts/openshiftci-presubmit-all-tests.sh and scripts/openshiftci-periodic-tests.sh respectively available in the https://github.com/openshift/odo/tree/master/scripts[odo] repository. Prow uses the script through the command attribute of the odo job configuration file in https://github.com/openshift/release/tree/master/ci-operator/config/openshift/odo[openshift/release] repository.
 
@@ -87,6 +85,7 @@ Similarly for running periodic test on 4.x cluster, job configuration file will 
 ----
 
 To generate the odo job file, run `make jobs` in https://github.com/openshift/release[openshift/release] for the odo pr and periodic tests.
+
 
 Job dashboard is monitored at:
 
